# StockmarketSim

./: .gitignore  build_installer.bat  installer.iss  pyproject.toml  requirements.txt
src/stockmarketsim/: Graphics.py  Indicators.py  LoadData.py  main.py
